(24/02) Exercício de formatação de textos

--- a/.theia/olamundo.html
+++ b/.theia/olamundo.html
@@ -12,7 +12,7 @@
     <p>Isto é um parágrafo
          (texto normal)<br><!--quebra de linha (break row)-->
         Este parágrafo 
-        exemplica <br><br>
+        exemplifica <br><br>
         um texto maior 
         em uma página HTML.</p>
     <p></p>
