(17/02 - Textos e parágrafos em HTML

--- a/Ex01.html/ex01.html
+++ b/Ex01.html/ex01.html
@@ -6,10 +6,11 @@
 <h1>A linguagem HTML[*]</h1>
 </style> </head>
 
-Qualquer um que tenha perdido a noção de tempo usando um computador conhece a propensão a sonhar, a urgência de realizar sonhos e a tendência a ficar sem almoçar.
-— Tim Berners-Lee
+<blockquote> Qualquer um que tenha perdido a noção de tempo usando um computador conhece a propensão a sonhar, a urgência de realizar sonhos e a tendência a ficar sem almoçar.</blockquote>
+<pclass="dir">— Tim Berners-Lee<p>
 
-HTML (abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de Marcação de Hipertexto", é uma linguagem de programação de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores.
+
+<p><abbr title=" Hipertext Markup Language">HTML  <p/abbr> (abreviação para a expressão inglesa HyperText Markup Language, que significa: "Linguagem de Marcação de Hipertexto", é uma linguagem de programação de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores.
 
 A linguagem em si é formada por tags, como <p> e <h1>.
 
