--- a/.theia/olamundo.html
+++ b/.theia/olamundo.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá mundo!</title>
 </head>
 <body>
-    <!-- H vem de Header (cabeçalho ou título)-->
+    <!-- H vem de Header = (cabeçalho ou título)-->
     <h1>Título de nível 1</h1>
     <h2>Título de nível 2</h2>
+    <h3>Título de nível 3</h3>
+    <h4>Título de nível 4</h4>
+    <h5>Título de nível 5</h5>
+    <h6>Título de nível 6</h6>
     <p>Isto é um parágrafo
          (texto normal)<br><!--quebra de linha (break row)-->
         Este parágrafo 
-        exemplifica <br><br>
-        um texto maior 
-        em uma página HTML.</p>
-    <p></p>
-    <p>Este é outro parágrafo.</p>
-    <p>tags são elementos html delimitados pelos caracteres<> </p>
-    <p>Emoji de sorriso: &#x1F60A;</p>
+        exemplifica <br>como ficaria um texto 
+        maior em uma página HTML.
+    </p>
+        <p>Este é outro parágrafo.</p>
+    <!--Códigos especiais para os sinais de MENOR QUE e MAIOR QUE
+        sinal de MENOR QUE: &lt; (less than)
+        sinal de MAIOR QUE: &gt; (greater than)
+    -->
+    <p>tags são elementos html delimitados pelos caracteres &lt; &gt;.</p>
+    <p>&copy; 2021 Pauliane Silveira</p>
+    <!-- Caracteres de seta
+        seta para cima:     &uarr; (up arrow)
+        seta para baixo:    &darr; (down arrow)
+        seta para direita:  &rarr; (right arrow)
+        seta para esquerda: &larr; (left arrow)
+    -->
+    <p> Representação de código de jogo (modo usuário):
+        &uarr; &uarr; &darr; &darr; &larr; &rarr;&larr; &rarr; A B Start</p>
+    <!-- 
+        Emojis: procure pelo codepoints do emoji em emojipedi.org
+        Troque o U+ do codepoint por &#x
+        Coloque um ; no final do codepoint
+    -->
+    <!--
+        Os códigos especiais que começam com & são chamados de 
+        HTML entities (entidades HTML)
+    -->
+        <p>Emoji de sorriso: &#x1F60A;</p>
 </body>
 </html>
