(20/02)Formatação de textos

--- a/.theia/02-textos.html
+++ b/.theia/02-textos.html
@@ -9,21 +9,31 @@
             background: yellow;
            /*fazendo o elemento ficar em linha&*/
             display: inline;
-            fonte-style: normal
+            font-style: normal;
+            text-decoration: underline;
         }
-        p{
-
+        strong {
+            color: red;
         }
-
-
     </style>
 </head>
 <body>
     <h1>Formatação de textos</h1>
     <!-- Tag <u> = underline (sublinhado) (NÃO USAR)-->
+    <!-- Tag <adress> = endereço (-->
     <p>Orkutilson morava na <adress>Rua do Sobe e Desce,
     333</adress>, e seu e-mail era <adress>orkutilson@gmail.com</adress>
 </p>
+<!--
+    <i> = itálico (visual apenas)
+    <b> = bold - negrito (visual apenas)    
+-->
+<p>Ele estudava em uma <strong>escola estadual</strong> e sua matéria preferida era <em>Matemática</em></p>
+<!-- 
+    <strong>  = forte - texto mais importante (SEMÂNTICA)
+    <em> = ênfase (emphansis) (SEMÂNTICA)
+-->
+<p>Ele tambpem gostava de usar <mark>caneta marca texto</mark> para destacar os trechos mais importantes do seu caderno.</p>
 </body>
 </html>
 
