--- a/.theia/02-textos.html
+++ b/.theia/02-textos.html
@@ -15,12 +15,24 @@
         strong {
             color: red;
         }
+        mark {
+            background-color: aqua;
+        }
+        h1 { 
+            /* Valores para text-align: left, right, center, justify.*/
+            text-align: center;
+        }
+        p.dir { 
+            text-align: right;
+        }
     </style>
 </head>
 <body>
     <h1>Formatação de textos</h1>
     <!-- Tag <u> = underline (sublinhado) (NÃO USAR)-->
     <!-- Tag <adress> = endereço (-->
+
+    <p class="dir"> História baseada em fatos reais.</p>
     <p>Orkutilson morava na <adress>Rua do Sobe e Desce,
     333</adress>, e seu e-mail era <adress>orkutilson@gmail.com</adress>
 </p>
@@ -28,74 +40,51 @@
     <i> = itálico (visual apenas)
     <b> = bold - negrito (visual apenas)    
 -->
-<p>Ele estudava em uma <strong>escola estadual</strong> e sua matéria preferida era <em>Matemática</em></p>
+<p>Ele estudava em uma <strong>escola estadual</strong> e sua matéria preferida era <em>Matemática.</em></p>
 <!-- 
     <strong>  = forte - texto mais importante (SEMÂNTICA)
     <em> = ênfase (emphansis) (SEMÂNTICA)
 -->
-<p>Ele tambpem gostava de usar <mark>caneta marca texto</mark> para destacar os trechos mais importantes do seu caderno.</p>
-</body>
-</html>
+<p>Ele também gostava de usar <mark>caneta marca texto</mark> para destacar os trechos mais importantes do seu caderno.</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- <strike> = traço através do texto (tachado) (OBSOLETO - NÃO USAR)
+    <del> = texto apagado (SEMÂNTICO)
+-->
+<p> Sua professora achava que ele era <del>meio burro </del>não muito inteligente, já que sempre tinha dificuldade nas provas. </p>
+<!-- 
+    <ins> = texto inserido, glosa (SEMÂNTICO) atualização das informações (ex: texto jornalístico)
+-->
+<p> Depois que fez a recuperação, sua nota foi de 6,7
+    <ins>o suficiente para sua aprovação.</ins></p>
+<!--
+    <sup> - texto sobrescrito (SUPercript)
+    <sub> = texto SUBscrito
+-->
+<p> Orkutilson também gostava de fórmulas. Suas preferidas eram
+    H<sub>2</sub>O e E=mc<sup>2</sup>.
+</p>
+<!-- 
+    <quote> = citações nomeio de um parágrafo
+    <blockquote> = um bloco de citação (com várias linhas, por exemplo)
+-->
+<p> Sua frase favorita era<quote> "Penso, logo existo" (Descartes).</quote>E seu trecho de música preferido era:</p>
+<blockquote>
+    Há tantos mundos diferentes <br>
+    Tantos sóis diferentes <br>
+    E nós temos apenas um mundo, <br>
+    Mas vivemos em mundos diferentes. <br>
+    (Dire Straits, Brothers in Arms) 
+</blockquote>
+<!--
+    <abbr> = Definição de abreviações
+-->
 <p> Em suas horas vagas, Orkutilson era um membro ativo da
-    <abbr title= "Associação dos Moradores do Bairro do Limão"> ASMOBALI</abbr>
+    <abbr title= "Associação dos Moradores do Bairro do Limão">ASMOBALI</abbr>
     e estudava
     <abbr title= "HiperText Markup Language"> HTML</abbr>. Suas tags favoritas eram
-    <code><blockcode></blockcode>
+    <code>&lt;blockquote&gt;</code> e
+    <code>&lt;adress&gt;</code>
+    <p class="dir"><em>Autor: Desconhecido</em></p>
 </p>
+</body>
+</html>
