(13/03) Término de imagens e início de links

--- a/07-imagens2.html
+++ b/07-imagens2.html
@@ -4,6 +4,7 @@
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <style>
         /*Regras iniciadas com # se aplicam ao elemento com id do mesmo nome*/
         #logo {
@@ -23,7 +24,7 @@
             /* Imagem de fundo da página
             Por padrão, a imagem se repete automaticamente para cobrir todo o fundo. */
             background-image: url('img/metal.jpg');
-            /* background-repeat: no-repeat; quando a imagem já for muito grande e não houver anecessecidade de repetir*/
+            /* background-repeat: no-repeat; quando a imagem já for muito grande e não houver a necessecidade de repetir*/
         }
     </style>
 </head>
@@ -45,7 +46,18 @@
     <!-- Regras de CSS também podem ser atribuídas diretamente a um elemento por meio do atributo style, porém não é recomendado, pois polui o código -->
     <img style= "width: 50%; border: 1px solid blue" src="img/svg-logo.svg" alt="Logotipo do formato SVG">
 
+    <!--
+        A tag <img> pertence ao grupo dos ELEMENTOS DE LINHA, ou seja, vários <img> em sequência, havendo largura suficiente, serão exibidos na mesma linha. 
 
+        Já a tag <div> (divisão) pertence ao grupo dos ELEMENTOS DE BLOCO. Cada elemento desse grupo ocupará, por padrão, toda a largura disponível, deslocando os demaispara baixo.
+    -->
+    <div style="background: yellow">
+    <img src="img/apptiva-icon.png" alt="Ícone do Apptiva">
+    </div>
+    <!-- Via CSS, é possivel fazer um elemento de linha se comportar como elemento de bloco -->
+    <img style="display:block" src="img/apptiva-icon.png" alt="Icone do Apptiva">
+    <img src="img/apptiva-icon.png" alt="Icone do Apptiva">
+    <img src="img/apptiva-icon.png" alt="Icone do Apptiva">
 </body>
 
 </html>
