--- a/08-links.html
+++ b/08-links.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links (hyperlinks ou hiperligações)</title>
+    <link rel="stylesheet" href="08.css">
 </head>
 <body>
     <!-- 
@@ -31,7 +32,47 @@
     <!--
         Links são representados pela tag <a> (anchor, âncora). O parâmetro href indica o destino do link.
         Sempre que o destino linkado NÃO pertencer ao nosso próprio site, o URL precisa iniciar com o protocolo (http:// ou https://).
+
+        O elemento <a> também é um elemento de linha (fica na mesma linha).
     -->
+
+    <!--
+        Link externo: leva para uma página em outro site.
+        Precisa começar com http:// ou https:// (endereço completo)
+    -->
+    <div> <!-- div é um elemento de bolco -->
     <a href="https://site.fatecfranca.edu.br"> Site oficial da Fatec Franca</a>
+    </div>    
+    <!-- 
+        Link interno: leva para uma página do próprio site.
+        Não precisa começar com o prefixo do protocolo.
+    -->
+    <p> <!-- p também é um elemento de bloco-->
+       Para maiores informações sobre o uso de imagens em HTML, consulte 
+    <a href="07-imagens2.html">Imagens 2</a>.Está tudo explicado lá.
+    </p>
+
+    <!--
+        Link externo que abre em uma nova janela
+        Para isso, usamos o atributo target com o valor - blank
+    -->
+    <div>
+        <a href="https://www.cps.sp.gov.br" target="-blank">Site do Centro Paula Souza</a>    
+    </div>
+
+    <!-- Link de imagem ( o link pode ser externo ou interno)
+        O "recheio" da tag <a>, em vez de ser um texto, é uma tag <img>.    
+    -->
+    <div>
+        <a href="07-imagens2.html" title= "Página principal do site da Apptiva">
+           <img src="img/apptiva-icon.png" alt="Site do Apptiva">
+        </a>
+    </div>
+
+    <div>
+        <a href="03-listas.html">Listas em HTML</a> 
+    </div>
+
+
 </body>
 </html>
