--- a/11-video.html
+++ b/11-video.html
@@ -36,7 +36,7 @@
     <h2>Exemplo de vídeo com múltiplas fontes</h2> 
 
     <!--
-        Parâmetros da tag <video>
+        Parâmetros da tag <video>:
         - width: largura do vídeo
         - poster: a imagem que aparecerá no lugar do vídeo antes da reprodução 
     -->
