--- a/06-imagens.html
+++ b/06-imagens.html
@@ -28,13 +28,13 @@
 
     <h4>Formatos de imagem vetorial</h4>
     <ul>
-        <li><strong>SVG</strong>(<em>Scalable Vector Graphics</em>, Figura de Vetores Escaláveis. Esse formato é lido e gravado por uma série de programas,como Adobe Ilustrator e o Inkscape. Os navegadores de Internet modernos sõ capazes de exibirSVG.)</li>
+        <li><strong>SVG</strong>(<em>Scalable Vector Graphics</em>, Figura de Vetores Escaláveis. Esse formato é lido e gravado por uma série de programas,como Adobe Ilustrator e o Inkscape. Os navegadores de Internet modernos são capazes de exibir SVG.)</li>
         <li>Outros formatos de imgens vetoriais, mas não são suportados diretamente pelos navegadores de Internet incluem: CDR (Corel Draw) e AI (Adobe Ilustrator) </li>
 
     <h3>Imagens de <em>bitmap</em></h3> 
     <p>São imagens que utilizam mapa de <em>bits</em> para representar a imagem.
-        Uma imagem é representadoa como um mosaico de pontos, (chamados pixels),
-        e o s formatos devem armazenar as informações de cor para cada um desses pontos.
+        Uma imagem é representada como um mosaico de pontos, (chamados pixels),
+        e os formatos devem armazenar as informações de cor para cada um desses pontos.
     </p>   
     <p>Imagens de <em>bitmap</em> são as mais comumente utilizadas na Internet, porque seu carregamento não depende de cálculos complicados (processamento), tendendo a ser mais rápido que o caso das imagens vetoriais. No entanto, imagens de dimensões muito grandes geram arquivos igualmente grandes, o que pode também se refletir no tempo de carregamento.</p>
     <p>Para equacionar o problema de imagens de <em>bitmap</em> muito grandes, os formatos geralmente dispõem do recurso compressão, à custa da qualidade da imagem.</p>
@@ -63,7 +63,7 @@
 
         <h4>Programas capazes de gerar imagens de <em>Bitmap/em></h4>
         <ul>
-            <li>Adobe Photoshop (formato nativo PSD, não entendido pelos avegadores)</li>
+            <li>Adobe Photoshop (formato nativo PSD, não entendido pelos navegadores)</li>
             <li>GIMP (formato nativo: XCF)</li>
             <li>Krita (formato nativo: KRA)</li>
 
