--- a/07-imagens2.html
+++ b/07-imagens2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset = "UTF-8">
+    <meta charset ="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -24,7 +24,7 @@
             /* Imagem de fundo da página
             Por padrão, a imagem se repete automaticamente para cobrir todo o fundo. */
             background-image: url('img/metal.jpg');
-            /* background-repeat: no-repeat; quando a imagem já for muito grande e não houver a necessecidade de repetir*/
+            /* background-repeat: no-repeat; quando a imagem já for muito grande e não houver a necessidade de repetir*/
         }
     </style>
 </head>
