28/04 - Início do projeto do portal de notícias.

--- a/07-imagens2.html
+++ b/07-imagens2.html
@@ -34,7 +34,7 @@
     -->
     <img id="logo" src="img/apptiva-logo.png" alt="Logotipo da empresa Apptiva">
    
-   <!-- <figue> para quando as imagens precisam de legenda-->
+   <!-- <figure> para quando as imagens precisam de legenda-->
    
     <figure>
         <img src='img/distance-education-1000px.jpg' alt="Educação a Distância" title="Venha estudar conosco!">
